deseign & Requests Handling

--- a/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.html
@@ -11,6 +11,7 @@
              </div>
           </div>
           <div class="main">
+            <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/v1495251840/w1ypshrmua1ywkbxbdjo.jpg"/>
              <div class="col-md-6 col-sm-12">
                 <div class="login-form">
                   <div class="logo"></div>
@@ -31,5 +32,7 @@
                 </div>
              </div>
           </div>
+          <!-- <div class="footer">
+          </div> -->
          </body> 
          </html>
