--- a/CrossRiverBank-client/src/app/modules/customer/sign-up/sign-up.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/sign-up/sign-up.component.html
@@ -13,9 +13,11 @@
           <div class="main">
              <div class="col-md-6 col-sm-12">
                 <div class="login-form">
-                  <div class="logo"></div>
+                  <div class="logo">
+                  </div>
                    <form id="form" class="form" [formGroup]="signUpForm">
-                    <h1>SignUp Form</h1>
+                     <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/v1495251840/w1ypshrmua1ywkbxbdjo.jpg" alt="">
+
                       <div class="form-group">
                         
                          <label>email</label>
