--- a/CrossRiverBank-client/src/app/modules/customer/account-info/account-info.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/account-info/account-info.component.css
@@ -1,3 +1,18 @@
 body{
     border-top: 50%;
 }
+/* .accountInfoDisplayDiv
+{
+    margin-top: 100px;
+} */
+.example-card {
+    max-width: 400px;
+}
+.mat-card{
+   margin: auto;
+   margin-top: 20%;
+   color:#2f62be; 
+}
+.title{
+    font-size: medium;
+}
