--- a/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
-    color:rgb(255, 0, 128);
+    color:​ #2f62be ;
 } 
 
 .main-head{
@@ -10,11 +10,12 @@ body {
 
 .sidenav {
     height: 100%;
-    
+    background-image: url("https://lh3.googleusercontent.com/p/AF1QipOnqkq2JGa9n7DjuwVK88fqOwKQwmj_KrZyG09n=s1600-w400");
+   background-size:cover;
     /* background-image: url("C:/Users/user/Downloads/view.png");  */
     background-position:1px 20px; 
     background-position:0% 30%,2%,1%;  
-      background-size:cover;
+   
       backface-visibility: hidden;
  
 }
@@ -45,6 +46,7 @@ body {
     .main{
         margin-left:70%; 
         margin-top: 0%;
+        height: 100%;
     }
 
     .sidenav{
@@ -55,10 +57,13 @@ body {
         left: 0;
     }
 
-    .login-form{
-         margin-top: 10%; 
-         /*position: fixed;*/
+    .login-form{ 
          width: 150px;
+         margin-top: 30%; 
+         color: #2f62be ;
+
+         /*position: fixed;*/
+       
     }
 
     .register-form{
@@ -71,21 +76,30 @@ body {
 .login-main-text{
     margin-top: 10%;
     padding: 6px;
-    color: rgb(255, 0, 128);
+    color:​ #2f62be ;
 }
 
 .login-main-text h2{
     font-weight: 300;
-    color:rgb(255, 0, 128);
+    color:​ #2f62be ;
 }
 
 .btn-black{
-    background-color: #000 !important;
-    color:rgb(255, 0, 128);
+    background-color: #180739 !important;
+    color:#ffffff;
 }
-.logo{
-    background-size:cover;
-    width:240px; 
-    height: 300px;
-    margin-bottom: 10%;
+/* .logo{
+    background-image: url("https://crossriver.com/sites/default/files/2019-02/logo-cross-river_invert.png");
+    background-size:auto;
+    background-position:1% 2%,10%,0%;  
+    width:300px; 
+    height: 240px;
+    margin-bottom: 10%; 
 }
+ */
+/* .footer
+{
+    background-image: url("../../../../רקע/footer.png");
+    background-size: cover;
+    height: 30%;
+} */
