--- a/CrossRiverBank-client/src/app/modules/customer/sign-up/sign-up.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/sign-up/sign-up.component.css
@@ -4,16 +4,21 @@ form{
    border-style:outset;
    margin-left: 10%;
    margin-right: 10%;
-   background-color: rgb(255, 0, 128);
+   background-color: #2f62be;
    border-style: inherit;
 }
 .sidenav{
     background-position-x: center;
 }
 .style{
-    background-color:black;
+    background-color:​ #180739;
+    color: #ffffff;
     border-style:dotted;
-    margin-right: 30%;
-    margin-left: 30%;
-    margin-top:10%;
+    padding: 30px;
+    margin: auto;
 }
+.col-md-6 
+    {
+          margin-left: 30%;  
+    }
+
