--- a/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.css
@@ -14,8 +14,8 @@ form{
     background-color:​ #180739;
     color: #ffffff;
     border-style:dotted;
-    padding: 30px;
-    margin: auto;
+    padding: 5px;
+    margin-top: 10%;
 }
 .col-md-6 
     {
