--- a/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
@@ -1,1 +1,44 @@
-<p>operations-history works!</p>
+<div>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
+      
+          <!-- Credit Column -->
+          <ng-container matColumnDef="Credit/Debit">
+            <th mat-header-cell *matHeaderCellDef> Credit/Debit </th>
+            <td mat-cell *matCellDef="let operation"> {{operation.credit}} </td>
+          </ng-container>
+      
+          <!-- AccountID Column -->
+          <ng-container matColumnDef="OtherAccountID">
+            <th mat-header-cell *matHeaderCellDef> AccountID </th>
+            <td mat-cell *matCellDef="let operation"> {{operation.accountID}} </td>
+          </ng-container>
+      
+          <!-- amount Column -->
+          <ng-container matColumnDef="amount">
+            <th mat-header-cell *matHeaderCellDef> Amount </th>
+            <td mat-cell *matCellDef="let operation"> {{operation.amount}} </td>
+          </ng-container>
+      
+          <!-- balance Column -->
+          <ng-container matColumnDef="balance">
+            <th mat-header-cell *matHeaderCellDef> Balance </th>
+            <td mat-cell *matCellDef="let operation"> {{operation.balance}} </td>
+          </ng-container>
+      
+          <!-- date Column -->
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let operation"> {{operation.date}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[3, 5, 10]"
+                       showFirstLastButtons 
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
+      </div>
+</div>
