--- a/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.css
@@ -1,3 +1,19 @@
 table {
     width: 100%;
+    margin: auto;
+    margin-top: 20%;
 }
+.contain-table{
+    margin: auto;
+}
+.mat-expansion-panel {
+    border-radius: 0;
+    box-shadow: none;
+  }
+  .mat-expansion-panel-body {
+      padding: 0;
+  }
+  
+  .mat-expansion-panel-header {
+    padding: 0; 
+  }
