--- a/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
@@ -1,44 +1,58 @@
 <div>
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource">
-      
-          <!-- Credit Column -->
-          <ng-container matColumnDef="Credit/Debit">
-            <th mat-header-cell *matHeaderCellDef> Credit/Debit </th>
-            <td mat-cell *matCellDef="let operation"> {{operation.credit}} </td>
-          </ng-container>
-      
-          <!-- AccountID Column -->
-          <ng-container matColumnDef="OtherAccountID">
-            <th mat-header-cell *matHeaderCellDef> AccountID </th>
-            <td mat-cell *matCellDef="let operation"> {{operation.accountID}} </td>
-          </ng-container>
-      
-          <!-- amount Column -->
-          <ng-container matColumnDef="amount">
-            <th mat-header-cell *matHeaderCellDef> Amount </th>
-            <td mat-cell *matCellDef="let operation"> {{operation.amount}} </td>
-          </ng-container>
-      
-          <!-- balance Column -->
-          <ng-container matColumnDef="balance">
-            <th mat-header-cell *matHeaderCellDef> Balance </th>
-            <td mat-cell *matCellDef="let operation"> {{operation.balance}} </td>
-          </ng-container>
-      
-          <!-- date Column -->
-          <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> Date </th>
-            <td mat-cell *matCellDef="let operation"> {{operation.date}} </td>
-          </ng-container>
+  <div class="mat-elevation-z8 contain-table">
+    <table mat-table [dataSource]="dataSource">
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-      
-        <mat-paginator [pageSizeOptions]="[3, 5, 10]"
-                       showFirstLastButtons 
-                       aria-label="Select page of periodic elements">
-        </mat-paginator>
-      </div>
+      <!-- Credit Column -->
+      <ng-container matColumnDef="credit">
+        <th mat-header-cell *matHeaderCellDef> Credit/Debit </th>
+        <!-- credit/debit -->
+        <td mat-cell *matCellDef="let operation">
+          {{operation.credit?"Creadit":"Debit"}}
+        </td>
+
+      </ng-container>
+
+      <!-- AccountID Column -->
+      <ng-container matColumnDef="accountID">
+        <th mat-header-cell *matHeaderCellDef> AccountID </th>
+        <td mat-cell *matCellDef="let operation">
+          <mat-expansion-panel hideToggle (click) = "getforeignAccountDetails(operation.accountID)">
+            <mat-expansion-panel-header>
+              <!-- <mat-panel-title> -->
+                {{operation.accountId}}
+              <!-- </mat-panel-title> -->
+
+            </mat-expansion-panel-header>
+            <p>{{foreignAccountDetails.firstName}} {{foreignAccountDetails.lastName}}</p>
+            <p>{{foreignAccountDetails.email}}</p>
+          </mat-expansion-panel>
+        </td>
+      </ng-container>
+
+      <!-- amount Column -->
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <td mat-cell *matCellDef="let operation"> {{operation.amount}} </td>
+      </ng-container>
+
+      <!-- balance Column -->
+      <ng-container matColumnDef="balance">
+        <th mat-header-cell *matHeaderCellDef> Balance </th>
+        <td mat-cell *matCellDef="let operation"> {{operation.balance}} </td>
+      </ng-container>
+
+      <!-- date Column -->
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let operation"> {{operation.date |date:'medium'}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[2, 3, 10]" showFirstLastButtons aria-label="Select page of your operations"
+      (page)="getNextPage($event)">
+    </mat-paginator>
+  </div>
 </div>
