--- a/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
@@ -16,14 +16,13 @@
       <ng-container matColumnDef="accountID">
         <th mat-header-cell *matHeaderCellDef> AccountID </th>
         <td mat-cell *matCellDef="let operation">
-          <mat-expansion-panel hideToggle (click) = "getforeignAccountDetails(operation.accountID)">
+          <mat-expansion-panel hideToggle (click) = "getforeignAccountDetails(operation.accountId)">
             <mat-expansion-panel-header>
-              <!-- <mat-panel-title> -->
+              <mat-panel-title>
                 {{operation.accountId}}
-              <!-- </mat-panel-title> -->
-
+              </mat-panel-title>
             </mat-expansion-panel-header>
-            <p>{{foreignAccountDetails.firstName}} {{foreignAccountDetails.lastName}}</p>
+            <p>{{foreignAccountDetails.firstName}} {{foreignAccountDetails.lastName}} </p>
             <p>{{foreignAccountDetails.email}}</p>
           </mat-expansion-panel>
         </td>
@@ -51,7 +50,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[2, 3, 10]" showFirstLastButtons aria-label="Select page of your operations"
+    <mat-paginator [pageSizeOptions]="[2, 4, 20]" showFirstLastButtons aria-label="Select page of your operations"
       (page)="getNextPage($event)">
     </mat-paginator>
   </div>
