--- a/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
@@ -50,7 +50,10 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[2, 4, 20]" showFirstLastButtons aria-label="Select page of your operations"
+    <mat-paginator [pageSizeOptions]="pageSizeOptions" 
+     showFirstLastButtons aria-label="Select page of your operations"
+     [pageIndex]="pageNumber" 
+     [pageSize]="numberOfRecords"
       (page)="getNextPage($event)">
     </mat-paginator>
   </div>
