--- a/CrossRiverBank-client/src/app/modules/customer/email-verification/email-verification.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/email-verification/email-verification.component.html
@@ -1,7 +1,7 @@
 <form  [formGroup]="confirmEmailCodeForm">
     <label for="confirmation">confirm code:</label>
-    <input type="text" placeholder="code" id="confirmation"  formControlName="code"/>
-    <input *ngIf="confirmEmailCodeForm.value" type="button" value="confirm" (click)="confirmCode()"/>
-    <input type="button" value="send again" (click)="sendConfirmCode()"/>
-    <input type="button" value="=>sign-up-again" style="display: none;" (click)="goToRegister()"/>  
+    <input type="text" placeholder="VerifiCode" id="confirmation"  formControlName="VerifiCode"/>
+    <input *ngIf="confirmEmailCodeForm.value" type="button" value="confirm" (click)="ConfirmCode()"/>
+    <input type="button" value="send again" (click)="SendCodeAgain()"/>
+    <input type="button" value="reset-sign-up-form" style="display: none;" (click)="goToRegister()"/>  
 </form>
