register_with_emailVerficition-dialog

--- a/CrossRiverBank-client/src/app/modules/customer/email-verification/email-verification.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/email-verification/email-verification.component.html
@@ -5,7 +5,7 @@
 <div mat-dialog-content>
   <mat-form-field appearance="fill">
     <mat-label>VerifiCode</mat-label>
-    <input matInput [(ngModel)]="registerFormDTO.VerifiCode"> 
+    <input matInput [(ngModel)]="data.VerifiCode"> 
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
