dialog-accountId-FuncGetDetail

--- a/CrossRiverBank-client/src/app/modules/customer/foreign-account-info/foreign-account-info.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/foreign-account-info/foreign-account-info.component.html
@@ -1,12 +1,12 @@
 
 <html>
-<h1 mat-dialog-title> {{accountDetails.accountId}} </h1>
+<h1 mat-dialog-title> </h1>
 
 <div mat-dialog-content>
-    <h3>Hi !!!!!!!!!!!!!{{accountDetails.firstName}} {{accountDetails.lastName}}</h3>
-    <h5>{{accountDetails.email}}</h5>
+    <h3>Hi !!!!!!!!!!!!!</h3>
+    <h5>{{foreignAccountDetails.accountId}}</h5>
 </div>
 <div mat-dialog-actions>
     <input  type="button" value="X" (click)="CloseDialog()"/>
 </div>
-</html>
+</html> 
