--- a/CrossRiverBank-client/src/app/modules/customer/foreign-account-info/foreign-account-info.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/foreign-account-info/foreign-account-info.component.html
@@ -1,12 +1,17 @@
 
 <html>
-<h1 mat-dialog-title> </h1>
+    <div mat-dialog-actions>
+        <input  type="button" value="X" (click)="CloseDialog()"/>
+    </div>
+<h1 mat-dialog-title>Foreign Account Details</h1>
 
 <div mat-dialog-content>
-    <h3>Hi !!!!!!!!!!!!!</h3>
-    <h5>{{foreignAccountDetails.accountId}}</h5>
+    <mat-label>firstName</mat-label>
+    <h3>{{foreignAccountDetails.firstName}}</h3>
+    <mat-label>lastName</mat-label>
+    <h3>{{foreignAccountDetails.lastName}}</h3>
+    <mat-label>email</mat-label>
+    <h3>{{foreignAccountDetails.email}}</h3>
 </div>
-<div mat-dialog-actions>
-    <input  type="button" value="X" (click)="CloseDialog()"/>
-</div>
+
 </html> 
