--- a/CrossRiverBank-client/src/app/modules/customer/email-verification/email-verification.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/email-verification/email-verification.component.html
@@ -1,4 +1,5 @@
 <html>
+  <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/v1495251840/w1ypshrmua1ywkbxbdjo.jpg" alt="" width="20%" height="20%">
 <h1 mat-dialog-title>Hi {{registerFormDTO.firstName}} </h1>
 <h3>we just want to make sure its you</h3>
 <p> check your email and confirm</p>
@@ -9,8 +10,8 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-    <input  type="button" value="confirm" (click)="ConfirmCode()"/>
-    <input type="button" value="send again" (click)="SendCodeAgain()"/>
-    <input type="button" value="reset-sign-up-form"  (click)="goToRegister()"/> 
+  <button mat-button color="primary" (click)="ConfirmCode()">confirm</button>
+  <button mat-button color="primary" (click)="SendCodeAgain()">send again</button>
+  <button mat-button color="primary" (click)="goToRegister()">reset-sign-up-form</button>
 </div>
 </html>
