--- a/CrossRiverBank-client/src/app/modules/customer/sign-up/sign-up.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/sign-up/sign-up.component.css
@@ -2,10 +2,14 @@ form{
     border: 0vmax;
     box-sizing: border-box;
    border-style:outset;
+   border-radius: 7%;
    margin-left: 10%;
    margin-right: 10%;
+   padding: 0 5% 5% 5%;
    background-color: #2f62be;
    border-style: inherit;
+   margin-top: 2%;
+   margin-bottom: 2%;
 }
 .sidenav{
     background-position-x: center;
@@ -14,11 +18,12 @@ form{
     background-color:​ #180739;
     color: #ffffff;
     border-style:dotted;
-    padding: 30px;
     margin: auto;
 }
 .col-md-6 
     {
           margin-left: 30%;  
     }
-
+button{
+    margin: 3%;
+}
