--- a/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.css
@@ -6,6 +6,8 @@ form{
    margin-right: 10%;
    background-color: #2f62be;
    border-style: inherit;
+   border-radius: 7%;
+   padding: 0% 5% 5% 5%;
 }
 .sidenav{
     background-position-x: center;
@@ -18,7 +20,10 @@ form{
     margin-top: 10%;
 }
 .col-md-6 
-    {
-          margin-left: 30%;  
-    }
+{
+    margin-left: 30%;  
+}
+button{
+    color: #180739;
+}
 
