--- a/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.html
@@ -27,8 +27,7 @@
                          <label>Amount</label>
                          <input type="number" class="form-control" placeholder="Amount" formControlName="Amount" >
                       </div>
-    
-                      <button type="submit" class="btn btn-black" (click)="updateBalance()">saveTransaction</button>   
+                      <button type="submit" mat-raised-button color="white" (click)="updateBalance()">save Transaction</button>
                    </form>
                 </div>
              </div>
