--- a/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.css
@@ -3,20 +3,13 @@ body {
     color:​ #2f62be ;
 } 
 
-.main-head{
-    height: 150px;
-    background: rgb(255, 0, 128);
-}
 
 .sidenav {
     height: 100%;
     background-image: url("https://lh3.googleusercontent.com/p/AF1QipOnqkq2JGa9n7DjuwVK88fqOwKQwmj_KrZyG09n=s1600-w400");
-   background-size:cover;
-    /* background-image: url("C:/Users/user/Downloads/view.png");  */
-    background-position:1px 20px; 
-    background-position:0% 30%,2%,1%;  
-   
-      backface-visibility: hidden;
+    background-size:cover;
+    background-position:0% 30%,2%,1%; 
+    backface-visibility: hidden;
  
 }
 
@@ -61,21 +54,17 @@ body {
          width: 150px;
          margin-top: 30%; 
          color: #2f62be ;
-
-         /*position: fixed;*/
-       
     }
 
     .register-form{
-        margin-bottom: 2%;
-        
+        margin-bottom: 2%;  
     }
 }
 
 
 .login-main-text{
     margin-top: 10%;
-    padding: 6px;
+    padding: 6%;
     color:​ #2f62be ;
 }
 
@@ -88,18 +77,3 @@ body {
     background-color: #180739 !important;
     color:#ffffff;
 }
-/* .logo{
-    background-image: url("https://crossriver.com/sites/default/files/2019-02/logo-cross-river_invert.png");
-    background-size:auto;
-    background-position:1% 2%,10%,0%;  
-    width:300px; 
-    height: 240px;
-    margin-bottom: 10%; 
-}
- */
-/* .footer
-{
-    background-image: url("../../../../רקע/footer.png");
-    background-size: cover;
-    height: 30%;
-} */
