--- a/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/log-in/log-in.component.html
@@ -22,7 +22,7 @@
                          <input type="text" class="form-control" placeholder="Email" formControlName="email">
                       </div>
                       <div class="form-group">
-                         <label>סיסמה</label>
+                         <label>password</label>
                          <input type="password" class="form-control" placeholder="Password" formControlName="password" >
                       </div>
                       <button type="submit" class="btn btn-black" (click)="logIn()">login</button>
