--- a/CrossRiverBank-client/src/app/modules/customer/customer-menu/customer-menu.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/customer-menu/customer-menu.component.css
@@ -19,11 +19,12 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #180739;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
+    right: 0;
 }
   
 
@@ -37,7 +38,7 @@ ul {
   }
   
   li a:hover:not(.active) {
-    color: #000;
+    color: #2f62be;
   }
   
   .active {
