--- a/CrossRiverBank-client/src/app/modules/customer/foreign-account-info/foreign-account-info.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/foreign-account-info/foreign-account-info.component.html
@@ -1,17 +1,19 @@
 
 <html>
-    <div mat-dialog-actions>
-        <input  type="button" value="X" (click)="CloseDialog()"/>
+    <button mat-button color="primary" (click)="CloseDialog()">X</button>
+    <div class="header">
+        <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/v1495251840/w1ypshrmua1ywkbxbdjo.jpg" alt="" width="20%" height="10%">
+        <span class="title">The Account Details</span>
+
     </div>
-<h1 mat-dialog-title>Foreign Account Details</h1>
 
-<div mat-dialog-content>
-    <mat-label>firstName</mat-label>
-    <h3>{{foreignAccountDetails.firstName}}</h3>
-    <mat-label>lastName</mat-label>
-    <h3>{{foreignAccountDetails.lastName}}</h3>
-    <mat-label>email</mat-label>
-    <h3>{{foreignAccountDetails.email}}</h3>
+
+<div mat-dialog-content class="account-Details">
+    <mat-label>Name: </mat-label>
+    <span>{{foreignAccountDetails.firstName}} {{foreignAccountDetails.lastName}}</span>
+    <br/>
+    <mat-label>email: </mat-label>
+    <span>{{foreignAccountDetails.email}}</span>
 </div>
-
-</html> 
+</html>
+<!-- mat-dialog-title -->
