--- a/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.css
+++ b/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.css
@@ -1,55 +1,24 @@
 table {
     width: 100%;
-    margin: auto;
-    margin-top: 20%;
+    border-radius: 3%;
 }
 .contain-table{
     margin: auto;
 }
-.mat-expansion-panel {
-    border-radius: 0;
-    box-shadow: none;
-  }
-  .mat-expansion-panel-body {
-      padding: 0;
-  }
-  
-  .mat-expansion-panel-header {
-    padding: 0; 
+.operations-container{
+  position: fixed;
+  width: 60%;
+  left:20%;
+  top: 20%;
+  height: 80%;
 }
-/* <--not expand--> */
-tr.operation-detail-row {
-    height: 0;
-  }
-  
-  tr.operation-row:not(.example-expanded-row):hover {
-    background: whitesmoke;
-  }
-  
-  tr.operation-row:not(.example-expanded-row):active {
-    background: #efefef;
-  }
-  
-  .operation-row td {
-    border-bottom-width: 0;
-  }
-  
-  .operation-detail {
-    overflow: hidden;
-    display: flex;
-  }
-  
-  .operation-credit {
-    font-weight: bold;
-    font-size: 40px;
-    line-height: normal;
-  }
-  
-  .operation-description {
-    padding: 16px;
-  }
-  
-  .operation-description-attribution {
-    opacity: 0.5;
-  }
-  
+h1{
+  margin-left: 40%;
+  color: #2f62be;
+}
+.mat-icon{
+  color: #2f62be;
+}
+.account-cell{
+  cursor: pointer;
+}
