--- a/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/operations-history/operations-history.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="operations-container">
+  <h1>-your operations-</h1>
   <div class="mat-elevation-z8 contain-table">
     <table mat-table [dataSource]="dataSource">
 
@@ -15,8 +16,9 @@
       <!-- AccountID Column -->
       <ng-container matColumnDef="accountId">
         <th mat-header-cell *matHeaderCellDef> AccountID </th>
-        <td mat-cell *matCellDef="let operation" (click) = "getforeignAccountDetails(operation.accountId)">
-                {{operation.accountId}}
+        <td class="account-cell" mat-cell *matCellDef="let operation" (click) = "getforeignAccountDetails(operation.accountId)">
+                {{operation.accountId}} 
+                <mat-icon>open_in_new</mat-icon>
         </td>
       </ng-container>
 
