--- a/CrossRiverBank-client/src/app/modules/customer/customer-menu/customer-menu.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/customer-menu/customer-menu.component.html
@@ -21,23 +21,25 @@
                 </svg>
                 <br>
                 <b>cardInfo</b> </a></li>
-                <li><a routerLink="/transaction" routerLinkActive="active">
-                  <svg xmlns="http://www.w3.org/3000/svg" width="45" height="45" fill="currentColor" class="bi bi-grid"
+                <li><a class ="transactionHistory" routerLink="/transaction" routerLinkActive="active">
+                  <!-- <svg xmlns="http://www.w3.org/3000/svg" width="45" height="45" fill="currentColor" class="bi bi-grid"
                     viewBox="0 0 16 16">
                     <path
                       d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z" />
-                  </svg>
-                  <br>
-                  <b>addTransaction</b> </a></li>
+                  </svg>-->
+                  <mat-icon>payment</mat-icon>
+                  <br /> 
+                  <b>add Transaction</b> </a></li>
 
-                  <li><a routerLink="/operationsHistory" routerLinkActive="active">
-                    <svg xmlns="http://www.w3.org/3000/svg" width="45" height="45" fill="currentColor" class="bi bi-grid"
+                  <li><a  class ="transactionHistory"routerLink="/operationsHistory" routerLinkActive="active">
+                    <!-- <svg xmlns="http://www.w3.org/3000/svg" width="45" height="45" fill="currentColor" class="bi bi-grid"
                       viewBox="0 0 16 16">
                       <path
                         d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z" />
-                    </svg>
+                    </svg> -->
+                    <mat-icon>cached</mat-icon>
                     <br>
-                    <b>operationsHistory</b> </a></li>
+                    <b>Transactions</b> </a></li>
         </div>
         <div class="left-element">
           <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
