--- a/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.html
+++ b/CrossRiverBank-client/src/app/modules/customer/updata-balance/updata-balance.component.html
@@ -1,37 +1,46 @@
-<html><body><div clas="reg">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
-    <div class="style">
-    <div class="sidenav">
-             <div class="login-main-text">
-                <div id="div"></div>
-                
-             </div>
-          </div>
-          <div class="main">
-             <div class="col-md-6 col-sm-12">
-                <div class="login-form">
+<html>
+
+<body>
+   <div clas="reg">
+      <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+      <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+      <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+      <!------ Include the above in your HEAD tag ---------->
+      <div class="style">
+         <div class="sidenav">
+            <div class="login-main-text">
+               <div id="div"></div>
+
+            </div>
+         </div>
+         <div class="main">
+            <div class="col-md-6 col-sm-12">
+               <div class="login-form">
                   <div class="logo">
                   </div>
-                   <form id="form" class="form" [formGroup]="updateBalanceForm">
-                     <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/v1495251840/w1ypshrmua1ywkbxbdjo.jpg" alt="">
+                  <form id="form" class="form" [formGroup]="updateBalanceForm">
+                     <img
+                        src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,h_256,w_256,f_auto,q_auto:eco,dpr_1/v1495251840/w1ypshrmua1ywkbxbdjo.jpg"
+                        alt="">
 
-                      <div class="form-group">
-                        
-                         <label>ToAccountID</label>
-                         <input type="number" class="form-control" placeholder="ToAccountID" formControlName="ToAccountID">
-                      </div>
-                      <div class="form-group">
-                         <label>Amount</label>
-                         <input type="number" class="form-control" placeholder="Amount" formControlName="Amount" >
-                      </div>
-                      <button type="submit" mat-raised-button color="white" (click)="updateBalance()">save Transaction</button>
-                   </form>
-                </div>
-             </div>
-          </div>
-          </div>
-        </div>
-         </body> </html>
+                     <div class="form-group">
+
+                        <label>ToAccountID</label>
+                        <input type="number" class="form-control" placeholder="ToAccountID"
+                           formControlName="ToAccountID">
+                     </div>
+                     <div class="form-group">
+                        <label>Amount</label>
+                        <input type="number" class="form-control" placeholder="Amount" formControlName="Amount">
+                     </div>
+                     <button type="submit" mat-raised-button color="white" (click)="updateBalance()">save
+                        Transaction</button>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</body>
+
+</html>
